feat(geometry): 实现中式屋顶脊系统生成功能
- 在 RoofPlateGenerator 中添加 generateRoofPlateV3 方法支持 HIP 和 XIESHAN 屋顶形式
- 集成 RoofRidgeGeneratorV3 生成中式屋顶脊系统
- 更新 BuildingMassPipeline 添加 SkeletonToSocketDeriver 集成说明
- 整合 RefinedSocketDeriver 功能到 LayeredSocketDeriver 中
- 添加详细的集成文档说明三个类的使用方式和触发条件
- 修复 RoofPlate 不可变对象的脊系统更新问题
- 添加异常处理确保 V3 生成失败时回退到基础屋顶